@@ -1,3 +1,8 @@
+2010-07-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* chrome/content/addressbook/newcard-overlay.js: when the current
+	window is an editing window, gEditCard.selectedAB is not defined.
+
 2010-07-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* chrome/content/sogo-integrator/addressbook/addressbook-overlay.js:
